--- a/t2/makefile
+++ b/t2/makefile
@@ -2,6 +2,7 @@ FILE=xqf131.tsp
 MAX_ITER=100
 TEMPERATURE=1000
 DATA_DIR=data
+N_TYPE=adjacent
 
 run:
-	python3 src/p3/main.py $(DATA_DIR)/$(FILE) $(MAX_ITER) $(TEMPERATURE)
+	python3 src/p3/main.py $(DATA_DIR)/$(FILE) $(MAX_ITER) $(TEMPERATURE) $(N_TYPE)
