--- a/t5/makefile
+++ b/t5/makefile
@@ -1,5 +1,8 @@
 SRC_DIR = src
 DATA_DIR = data
+FILE = 4_11
+MAX_ITERS = 100
+SIZE = 10
 
 run:
-	@python3 ./$(SRC_DIR)/main.py
+	@python3 ./$(SRC_DIR)/main.py -f $(FILE) -m $(MAX_ITERS) -s $(SIZE)
