--- a/t6/makefile
+++ b/t6/makefile
@@ -1,11 +1,12 @@
 SRC_DIR = src
 DATA_DIR = data
 FUNCT = sphere
-MAX_ITERS = 10000
+# sphere / ackley / griewank / tenth / rastrigin / rosenbrock
+MAX_EVALS = 10000
 SIZE = 100
 CROSS = 0.9
 SCALE = 0.7
 DIM = 10
 
 run:
-	@python3 ./$(SRC_DIR)/main.py -f $(FUNCT) -m $(MAX_ITERS) -s $(SIZE) -cr $(CROSS) -sc $(SCALE) -d $(DIM)
+	@python3 ./$(SRC_DIR)/main.py -f $(FUNCT) -m $(MAX_EVALS) -s $(SIZE) -cr $(CROSS) -sc $(SCALE) -d $(DIM)
