--- a/t7/makefile
+++ b/t7/makefile
@@ -1,2 +1,9 @@
+FUNCT = c
+
 run:
-	@python3 ./src/main.py ./config.yaml
+	@python3 ./src/main.py ./config.yaml $(FUNCT)
+
+gif:
+	@python3 ./src/main.py ./config.yaml $(FUNCT)
+	@ffmpeg -y -i ./figs/%02d.png ./figs/$(FUNCT).gif
+	@rm figs/*.png
