--- a/t7/config.yaml
+++ b/t7/config.yaml
@@ -1,5 +1,8 @@
 functions:
-  using: 'c'
+  using: 'sphere'
+  sphere:
+    blo: -5.12
+    bup: 5.12
   cosin:
     blo: -1.5
     bup: 5
@@ -13,11 +16,11 @@ functions:
     blo: 1
     bup: 5
 
-maxevals: 50
-size: 200
+maxevals: 30
+size: 50
 dim: 2
-omega: 0.6
-phip: 0.8
-phig: 0.3
-lr: 0.2
+omega: 0.75
+phip: 0.3
+phig: 0.7
+lr: 0.4
 nBest: 3
